--- a/package.json
+++ b/package.json
@@ -3,26 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^3.22.0",
+    "@emotion/react": "^11.14.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "typescript": "^4.9.5",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "cd src/server && npm run dev",
+    "dev": "concurrently \"npm run server\" \"npm start\"",
     "build": "react-scripts build",
+    "build:server": "cd src/server && nbpm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -31,6 +45,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "overrides": {
+    "typescript": "^5.8.3"
   },
   "browserslist": {
     "production": [
@@ -43,5 +60,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.23",
+    "@types/node": "^24.0.15",
+    "concurrently": "^9.2.0",
+    "typescript": "^5.8.3"
   }
 }
