--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "german-bridge-server",
   "version": "1.0.0",
@@ -14,29 +13,30 @@
     "test": "echo \"No tests specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "dotenv": "^16.3.1",
-    "socket.io": "^4.7.2",
-    "jsonwebtoken": "^9.0.2",
+    "@supabase/supabase-js": "^2.54.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.1.6",
-    "@types/node": "^20.4.5",
-    "@types/express": "^4.17.17",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^20.4.5",
     "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "eslint": "^8.45.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.0"
+    "typescript": "^5.1.6"
   },
   "keywords": [
     "bridge",
